<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="info.androidhive.materialdesign.activity.NeedFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b51"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:background="@drawable/button_selector"/>

        <EditText
            android:id="@+id/E11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="60dip"
            android:hint="@string/exp"
            android:textSize="20sp"
            android:background="@drawable/edittextstyle" >
        </EditText>

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b61"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/del"
            android:background="@drawable/button_selector"/>

        <EditText
            android:id="@+id/E21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="60dip"
            android:hint="@string/num"
            android:textSize="20sp"
            android:background="@drawable/edittextstyle">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b77"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Mod"
            android:background="@drawable/button_selector"/>

        <EditText
            android:id="@+id/E3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="60dip"
            android:hint="@string/num"
            android:textSize="20sp"
            android:background="@drawable/edittextstyle">
        </EditText>

        <EditText
            android:id="@+id/E4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="60dip"
            android:hint="@string/Mod3"
            android:textSize="20sp"
            android:background="@drawable/edittextstyle">
        </EditText>
    </LinearLayout>

    <Button
        android:id="@+id/b71"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/off"
        android:background="@drawable/button_selector"/>

    <ListView
        android:id="@+id/listView11"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</LinearLayout>